--- a/src/assets/scss/layout/_header-blog.scss
+++ b/src/assets/scss/layout/_header-blog.scss
@@ -50,20 +50,58 @@
 .nav__link{
   font-size: 16px;
   position: relative;
-} 
+}
 .nav__link:before{
   content: "";
   position: absolute;
-  bottom: 20px;
+  // top: 0;
+  bottom: 0;
+  bottom: 10px;
   right: 0;
+  left: 0;
+  background: #fff;
+  transform: rotate(32deg) translateX(-4.5px);
+  border-radius: 50px;
+  margin: 0 auto;
   width: 0;
-  height: 3px;
+  height: 0;
+  height: 1px;
   transition: .7s all;
 }
-.nav__link:hover:before{
-  width: 100%;
-  background: rgb(255, 255, 255);
+.nav__link::after{
+  content: "";
+  position: absolute;
+  // top: 0;
+  bottom: 10px;
+  right: 0;
+  left: 0;
+  background: #fff;
+  transform: rotate(-32deg) translateX(4.5px);
+  border-radius: 50px;
+  margin: 0 auto;
+  width: 0;
+  height: 1px;
+  transition: .7s all;
 }
+.nav__link:hover::before{
+  width: 10px;
+}
+.nav__link:hover::after{
+  width: 10px;
+}
+// .nav__link:before{
+//   content: "";
+//   position: absolute;
+//   bottom: 20px;
+//   right: 0;
+//   width: 0;
+//   height: 3px;
+//   transition: .7s all;
+// }
+// .nav__link:hover:before{
+//   width: 100%;
+//   background: rgb(255, 255, 255);
+// }
 .upper-blog__contacts{
   margin-left: auto;
   display: flex;
