--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -37,7 +37,7 @@ input::-webkit-outer-spin-button{
 @import'./include/fonts';
 @import'./include/var';
 @import'./layout/footer';
-@import'./layout/header-blog';
+@import'./layout/header';
 @import'./layout/media';
 
 
