--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -10,11 +10,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-}
-.personal-data h2{
-  font-weight: 700;
-  font-size: 36px;
-  color:var(--color-gray-10);
+  h2{
+    font-weight: 700;
+    font-size: 36px;
+    color:var(--color-gray-10);
+  }
 }
 .block-form{
   display: flex;
@@ -58,11 +58,11 @@
   align-items: center;
   gap: 10px;
   margin-top: 20px;
-}
-.checkbox p{
-  font-weight: 400;
-  font-size: 10px;
-  color: var(--color-gray-40);
+  p{
+    font-weight: 400;
+    font-size: 10px;
+    color: var(--color-gray-40);
+  }
 }
 .send{
   display: flex;
@@ -90,75 +90,43 @@
   height: 141px;
   background: var(--color-dark-80);
 }
-.lower-blog__contacts p{
-  font-weight: 400;
-  font-size: 18px;
-  margin-top: 20px;
-  color: var(--color-gray-10);
-  padding: 0px 0px 10px 0px;
+.lower-blog__contacts {
+  p{
+    font-weight: 400;
+    font-size: 18px;
+    margin-top: 20px;
+    color: var(--color-gray-10);
+    padding: 0px 0px 10px 0px;
+  }
+  span{
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 400;
+    font-size: 12px;
+  }
+  a{
+    font-weight: 700;
+    font-size: 18px;
+    color: var(--color-gray-10);
+  }
 }
-.lower-blog__contacts span{
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-weight: 400;
-  font-size: 12px;
-}
-.lower-blog__contacts a{
-  font-weight: 700;
-  font-size: 18px;
-  color: var(--color-gray-10);
-}
-.footer__title p{
-  font-weight: 400;
-  font-size: 18px;
-  color: var(--color-aqua);
-  text-align: right;
-}
-.footer__title span{
-  font-weight: 400;
-  font-size: 18px;
-  color: var(--color-gray-10);
+.footer__title{
+  text-align: end;
+  p{
+    font-weight: 400;
+    font-size: 18px;
+    color: var(--color-aqua);
+    text-align: right;
+  }
+  span{
+    font-weight: 400;
+    font-size: 18px;
+    color: var(--color-gray-10);
+  }
 }
 .footer__blog{
   max-width: 300px;
   width: 100%;
-}
-@media screen and (max-width: 920px) {
-  .personal-data{
-    flex-direction: column;
-  }
-  .footer{
-    padding: 100px 0px 100px 0px;
-    flex-direction: column;
-    align-items: center;
-  }
-  .lower-blog__contacts{
-    text-align: center;
-    padding: 0px 0px 0px 20px;
-  }
-  .personal-data h2{
-    font-weight: 700;
-    font-size: 20px;
-  }
-  .footer__blog,
-  .search,
-  .messages,
-  .send{
-    width: 100%;
-    margin: 15px auto;
-  }
-  .checkbox{
-    padding: 0px 0px 0px 50px;
-  }
-  .footer__title p{
-    text-align: center !important;
-  }
-}
-@media screen and (max-width: 320px) {
-  .lower-blog__contacts{
-    text-align: center;
-    padding: 0px 0px 0px 20px;
-  }
 }
