--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -109,29 +109,31 @@
   gap: 5px;
   font-weight: 400;
   font-size: 12px;
+  a{
+    font-weight: 700;
+    font-size: 17px;
+    margin-left: 12px;
+  }
 }
-.upper-blog__contacts a{
-  font-weight: 700;
-  font-size: 17px;
-  margin-left: 12px;
-}
-.header-blog h1{
-  font-weight: 900;
-  font-size: 50px;
-  color: var(--color-aqua);
-  margin-top: 37px;
-}
-.header-blog p{
-  // font-size: calc(var(--index)*0.9);
-  font-weight: 900;
-  font-size: 18px;
-  color: var(--color-aqua);
-  margin: 57px 0px 10px 0px;
-}
-.header-blog span{
-  display: flex;
-  align-items: center;
-  gap: 5px;
+.header-blog {
+  h1{
+    font-weight: 900;
+    font-size: 50px;
+    color: var(--color-aqua);
+    margin-top: 37px;
+  }
+  p{
+    // font-size: calc(var(--index)*0.9);
+    font-weight: 900;
+    font-size: 18px;
+    color: var(--color-aqua);
+    margin: 57px 0px 10px 0px;
+  }
+  span{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
 }
 .button{
   display: flex;
