--- a/assets/scss/layout/_media.scss
+++ b/assets/scss/layout/_media.scss
@@ -221,6 +221,33 @@
     display: flex;
     align-items: center;
   }
+
+  .personal-data{
+    flex-direction: column;
+  }
+  .footer{
+    padding: 100px 0px 100px 0px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .lower-blog__contacts{
+    text-align: center;
+    padding: 0px 0px 0px 20px;
+  }
+  .personal-data h2{
+    font-weight: 700;
+    font-size: 20px;
+  }
+  .footer__blog,
+  .search,
+  .messages,
+  .send{
+    width: 100%;
+    margin: 15px auto;
+  }
+  .footer__title p{
+    text-align: center !important;
+  }
 }
 
 
@@ -268,6 +295,11 @@
       font-weight: 400;
       font-size: 13px;
     }
+  }
+
+  .lower-blog__contacts{
+    text-align: center;
+    padding: 0px 0px 0px 20px;
   }
 }
 
