--- a/assets/scss/layout/_media.scss
+++ b/assets/scss/layout/_media.scss
@@ -26,6 +26,12 @@
     flex-direction: column;
     margin: 20px 0;
   }
+  .nav__link:before{
+    display: none;
+  }
+  .nav__link::after{
+    display: none;
+  }
   .nav-collapse.is-active {
     max-height: 500px;
     padding-top: 40px;
